[gd_scene load_steps=2 format=3 uid="uid://c9v4x7y2z5abc"]

[ext_resource type="Script" path="res://systems/goap/debug/ui/panels/performance_monitor.gd" id="1_perf"]

[node name="PerformanceMonitor" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_perf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Performance Monitor"

[node name="RefreshButton" type="Button" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"

[node name="ResetButton" type="Button" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Stats"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlanningSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="VBoxContainer/PlanningSection"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Planning Performance"

[node name="PlanningGrid" type="GridContainer" parent="VBoxContainer/PlanningSection"]
layout_mode = 2
columns = 2

[node name="AvgKeyLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
layout_mode = 2
text = "Average Time:"

[node name="PlanningAvgLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="MinKeyLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
layout_mode = 2
text = "Min Time:"

[node name="PlanningMinLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="MaxKeyLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
layout_mode = 2
text = "Max Time:"

[node name="PlanningMaxLabel" type="Label" parent="VBoxContainer/PlanningSection/PlanningGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlansSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="VBoxContainer/PlansSection"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Plan Statistics"

[node name="PlansGrid" type="GridContainer" parent="VBoxContainer/PlansSection"]
layout_mode = 2
columns = 2

[node name="CreatedKeyLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
layout_mode = 2
text = "Plans Created:"

[node name="PlansCreatedLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="CompletedKeyLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
layout_mode = 2
text = "Plans Completed:"

[node name="PlansCompletedLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="FailedKeyLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
layout_mode = 2
text = "Plans Failed:"

[node name="PlansFailedLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="SuccessRateKeyLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
layout_mode = 2
text = "Success Rate:"

[node name="SuccessRateLabel" type="Label" parent="VBoxContainer/PlansSection/PlansGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Action Statistics"

[node name="ActionsGrid" type="GridContainer" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
columns = 2

[node name="ExecutedKeyLabel" type="Label" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Actions Executed:"

[node name="ActionsExecutedLabel" type="Label" parent="VBoxContainer/ActionsSection/ActionsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="FailedKeyLabel" type="Label" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Actions Failed:"

[node name="ActionsFailedLabel" type="Label" parent="VBoxContainer/ActionsSection/ActionsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MemorySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="VBoxContainer/MemorySection"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Memory Usage"

[node name="MemoryGrid" type="GridContainer" parent="VBoxContainer/MemorySection"]
layout_mode = 2
columns = 2

[node name="EventCountKeyLabel" type="Label" parent="VBoxContainer/MemorySection/MemoryGrid"]
layout_mode = 2
text = "Event Buffer:"

[node name="EventCountLabel" type="Label" parent="VBoxContainer/MemorySection/MemoryGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="EventCapacityKeyLabel" type="Label" parent="VBoxContainer/MemorySection/MemoryGrid"]
layout_mode = 2
text = "Max Capacity:"

[node name="EventCapacityLabel" type="Label" parent="VBoxContainer/MemorySection/MemoryGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "-"
